# dehancer-client-cpp

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  dehancer-client-cpp.pc.in  version.txt
include/dehancer/: Client.h
include/dehancer/client/: HttpMessage.h  Launcher.h  ProfileInfo.h  Rpc.h  UrlSession.h  UrlSession.hpp  UserDefaults.h  version.h.in
include/dehancer/client/camera/: ProfileInfo.h
include/dehancer/client/film/: ProfileInfo.h
lib/: CMakeLists.txt
lib/cmake/: FindRxCpp.cmake  dehancer_client_cpp.cmake
lib/macos/: Cmake.inc
src/client/: HttpMessage.cpp  Rpc.cpp  Semaphore.cpp  UrlSession.cpp  UserDefaults.cpp
src/client/camera/: ProfileInfo.cpp
src/client/film/: ProfileInfo.cpp
src/client/platform/macos/: KeyChain.h  KeyChain.mm  LauncherMacOs.h  LauncherMacOs.mm  UserMacOs.h  UserMacOs.mm
tests/: CMakeCommon.in  CMakeLists.txt
tests/basic/: CMakeLists.txt  basic_connection.cpp
tests/dotenv/: dotenv.h
tests/download/: CMakeLists.txt  download.cpp
tests/rpc/: CMakeLists.txt  login.cpp  set_info.cpp
tests/rx/: CMakeLists.txt  proxy.cpp
tests/user/: CMakeLists.txt  defaults.cpp
